fix button alignment

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -543,7 +543,6 @@ i.fa.fa-cart-plus {
 
 .fa.fa-plus {
     display: inline-block;
-    vertical-align: middle;
 }
 
 #course-dropdown, #course-details-dropdown {
